--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -49,7 +49,9 @@
   <div id="wrap">
     <div id="main">
       <body>
-        {% block content %}{% endblock %}
+      	<div class="divider-15">
+        	{% block content %}{% endblock %}
+        </div>
       </body>
     </div>
   </div>
