--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -1,8 +1,8 @@
-<form class="form-inline" method="POST" action="{{ url_for('action') }}">
+<!-- <form class="form-inline" method="POST" action="{{ url_for('action') }}">
 	<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
     <div id="vertical">
         <h3>Options</h3>
-        {% for item in options %}
+        {% for item in options_names %}
             <input type="checkbox" name="opt" value="{{ item }}">{{ item }}<br>
         {% endfor %}
     </div>
@@ -10,7 +10,28 @@
         <button type="submit" class="btn btn-outline-dark ml-2">GO</button>
     </div>
 </form>
-</br>
+<form> -->
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+</head>
+<h3>Select options</h3>
+{% set options_types = opts_types_params_dest[0] %}
+{% set options_params = opts_types_params_dest[1] %}
+{% set options_dest = opts_types_params_dest[2] %}
+<form class="form-horizontal" method="POST" action="{{ url_for('action') }}">
+<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">     
+{% for dict_item in options_params %}
+    {% set i = loop.index - 1 %}    
+    {% for key, value in dict_item.items() %}
+        <div class="form-group row">
+            <label class="col-sm-3 col-form-label"><b><pre>{{ options_names[i] }}</pre></b></label>
+            <div class="col-sm-4">
+                <input class="form-control" type="{{ options_types[i] }}" {{ key }}="{{ value }}" name="{{ options_dest[i] }}">
+            </div>
+        </div>
+    {% endfor %}
+{% endfor %}
+</form>
 <div>
 	<p>See <a href="https://looper.readthedocs.io/en/latest/usage.html" target="_new">looper documentation</a> for the options explanation.</p>
 </div>
