add goback button, use referrer

--- a/caravel/templates/error.html
+++ b/caravel/templates/error.html
@@ -11,5 +11,5 @@
 	</ul>
 </div>
 <br style = “line-height:2;”><br>
-<p>Go back to the <a href="{{ url_for('index') }}"><b>Home page</b></a>
+<a href="{{ referrer }}"><button type="submit" class="btn btn-outline-dark ml-2">Go back <i class="fas fa-arrow-left"></i></button></a>
 {% endblock %}
