--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -12,7 +12,7 @@
 </form>
 <form> -->
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <h3>Select options</h3>
 {% set options_types = opts_types_params_dest[0] %}
@@ -31,6 +31,9 @@
         </div>
     {% endfor %}
 {% endfor %}
+<div id=vertical>
+    <button type="submit" class="btn btn-outline-dark ml-2">GO</button>
+</div>
 </form>
 <div>
 	<p>See <a href="https://looper.readthedocs.io/en/latest/usage.html" target="_new">looper documentation</a> for the options explanation.</p>
