--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -1,16 +1,4 @@
-<!-- <form class="form-inline" method="POST" action="{{ url_for('action') }}">
-	<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
-    <div id="vertical">
-        <h3>Options</h3>
-        {% for item in options_names %}
-            <input type="checkbox" name="opt" value="{{ item }}">{{ item }}<br>
-        {% endfor %}
-    </div>
-    <div id=vertical>
-        <button type="submit" class="btn btn-outline-dark ml-2">GO</button>
-    </div>
-</form>
-<form> -->
+<!-- This page serves the automatic html form elements display -->
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
@@ -18,20 +6,32 @@
 {% set options_types = opts_types_params_dest[0] %}
 {% set options_params = opts_types_params_dest[1] %}
 {% set options_dest = opts_types_params_dest[2] %}
-<form class="form-horizontal" method="POST" action="{{ url_for('action') }}">
+<form method="POST" action="{{ url_for('action') }}">
 <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">     
 {% for dict_item in options_params %}
     {% set i = loop.index - 1 %}    
     {% for key, value in dict_item.items() %}
-        <div class="form-group row">
-            <label class="col-sm-3 col-form-label"><b><pre>{{ options_names[i] }}</pre></b></label>
-            <div class="col-sm-4">
+        <div class="form-row">
+            <div class="col-3">
+                <label class="col-form-label"><b><pre>{{ options_names[i] }}</pre></b></label>
+            </div>
+            {% if options_types[i] == "range" %}
+            <!-- if element type is range, add a badge displaying the current slider value -->
+            <div class="col-3">
+                <input class="form-control" type="{{ options_types[i] }}" {{ key }}="{{ value }}" name="{{ options_dest[i] }}" onchange="show_value(this.name,this.value)">
+            </div>
+            <div class="col">
+                <p id="{{ options_dest[i] }}" class="badge badge-primary">50</p>
+            </div>
+            {% else %}
+            <div class="col-3">
                 <input class="form-control" type="{{ options_types[i] }}" {{ key }}="{{ value }}" name="{{ options_dest[i] }}">
             </div>
+            {% endif %}
         </div>
     {% endfor %}
 {% endfor %}
-<div id=vertical>
+<div class="divider-vertical">
     <button type="submit" class="btn btn-outline-dark ml-2">GO</button>
 </div>
 </form>
