--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -18,7 +18,7 @@
             {% if options_types[i] == "range" %}
             <!-- if element type is range, add a badge displaying the current slider value -->
             <div class="col-3">
-                <input class="form-control" type="{{ options_types[i] }}" {{ key }}="{{ value }}" name="{{ options_dest[i] }}" onchange="show_value(this.name,this.value)">
+                <input class="form-control" type="{{ options_types[i] }}" {{ key }}="{{ value }}" name="{{ options_dest[i] }}" oninput="show_value(this.name,this.value)">
             </div>
             <div class="col">
                 <p id="{{ options_dest[i] }}" class="badge badge-primary">50</p>
