put subproject activation info to a badge

--- a/caravel/templates/process.html
+++ b/caravel/templates/process.html
@@ -69,7 +69,9 @@
             <option value=reset>None</option>
         </select>
         <a href='#' id=show_subproject><button type="submit" class="btn btn-outline-dark ml-2">ACTIVATE</button></a>
-        <i><p id=subproj_txt>No subproject activated</p></i>
+        <div class="divider-vertical">
+          <p id=subproj_txt class="badge badge-primary">No subproject activated</p>
+        </div>
     {% endif %}
     <hr class="col-xs-12">
       <h2>Perform action on the PEP</h2>
