--- a/caravel/templates/process.html
+++ b/caravel/templates/process.html
@@ -34,21 +34,21 @@
   });
 </script>
 <script type=text/javascript>
-  function render_summary_link() {
-      $.getJSON($SCRIPT_ROOT + '/_background_summary', {
+  function render_summary_notice() {
+      $.getJSON($SCRIPT_ROOT + '/_background_summary_notice', {
       }, function(data) {
         if(data.present == "0"){
           document.getElementById("summary_btn").disabled = true;
+          $("div#summary_notice").html(data.summary);
         } else{
           document.getElementById("summary_btn").disabled = false;
         }
-        $("div#summary").html(data.summary);
       });
       return false;
     }
   $(function() {
     // The function is triggered on page load and with the "a#show_summary" button
-    render_summary_link()
+    render_summary_notice()
   });
 </script>
 <script>
@@ -87,11 +87,11 @@
       </select>
     <div id="options" class="divider-vertical"></div>
     <hr class="col-xs-12">
-    <form method="POST" action="{{ url_for('background_see_summary') }}">
+    <form method="POST" action="{{ url_for('summary') }}">
       <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
       <div class="divider-vertical">
         <button type="submit" id="summary_btn" name="summary_btn" class="btn btn-outline-dark">See summary</button>
       </div>
     </form>
-    <div id="summary"></div>
+    <div id="summary_notice"></div>
 {% endblock %}
