outsource the looper running code, simplifications, cleanup

--- a/caravel/templates/process.html
+++ b/caravel/templates/process.html
@@ -47,7 +47,7 @@
       return false;
     }
   $(function() {
-    // The function is triggered on page load and with the "a#show_summary" button
+    // The function is triggered on page load
     render_summary_notice()
   });
 </script>
