--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -32,7 +32,7 @@
 			{% block navbar %}
 			{% endblock %}
 		</ul> 
-		<ul <ul class="nav justify-content-end" >
+		<ul class="nav justify-content-end">
 			<li class="nav-item active">
 				<a class="nav-link" href="http://databio.org">Databio.org <i class="fa fa-database"></i></a>
 			</li>
