--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -55,10 +55,46 @@
     </div>
   </div>
   {% block footer %}
-  <footer class="footer">
-  <div id="footer">
-    <span class="muted"><b>caravel v{{caravel_version}}</b> using looper v{{looper_version}} © 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
-  </div>
-  </footer>
-  {% endblock %}
+  <!-- <footer class="page-footer font-small blue">
+  	<table class="table-responsive">
+  <thead>
+    <tr>
+      <th scope="col">caravel</th>
+      <th scope="col">looper</th>
+      <th scope="col">Python</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td scope="row"><a href="http://code.databio.org/caravel/"><img src="{{ url_for('static',filename='caravel_icon.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{caravel_version}}</code></td>
+      <td scope="row"><a href="https://looper.readthedocs.io/en/latest/"><img src="{{ url_for('static',filename='logo_looper.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{looper_version}}</code></td>
+      <td scope="row"><a href="https://www.python.org/"><img src="{{ url_for('static',filename='python.svg') }}" width="30" height="30" alt=""></a><code class="footer"> {{python_version}}</code></td>
+    </tr>
+</tbody>
+</table>
+© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia
+</footer> -->
+<hr class="featurette-divider">
+<footer class="text-muted">
+	<span class="left">
+      	<table class="table-responsive">
+			  <thead>
+			    <tr>
+			      <th scope="col">caravel</th>
+			      <th scope="col">looper</th>
+			      <th scope="col">Python</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <td scope="row"><a href="http://code.databio.org/caravel/" target="_new"><img src="{{ url_for('static',filename='caravel_icon.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{caravel_version}}</code></td>
+			      <td scope="row"><a href="https://looper.readthedocs.io/en/latest/" target="_new"><img src="{{ url_for('static',filename='logo_looper.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{looper_version}}</code></td>
+			      <td scope="row"><a href="https://www.python.org/" target="_new"><img src="{{ url_for('static',filename='python.svg') }}" width="30" height="30" alt=""></a><code class="footer"> {{python_version}}</code></td>
+			    </tr>
+			</tbody>
+		</table>
+	</span>
+        <span class="right">© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
+    </footer>
+{% endblock %}
 </html>
