outsource the back to referrer button, deactivate if none, closes #66

--- a/caravel/templates/error.html
+++ b/caravel/templates/error.html
@@ -15,5 +15,5 @@
 	</ul>
 </div>
 <br style = “line-height:2;”><br>
-<a href="{{ referrer }}"><button type="submit" class="btn btn-outline-dark ml-2">Go back <i class="fas fa-arrow-left"></i></button></a>
+{% include 'back_referrer.html' %}
 {% endblock %}
