--- a/caravel/templates/execute.html
+++ b/caravel/templates/execute.html
@@ -24,5 +24,5 @@
 {% block content %}
 <h2>Looper results:</h2>
 <div id="result" class="divider-vertical"><code>No result yet</code></div>
-<a href="{{ referrer }}"><button type="submit" class="btn btn-outline-dark ml-2">Go back <i class="fas fa-arrow-left"></i></button></a>
+{% include 'back_referrer.html' %}
 {% endblock %}
