--- a/caravel/templates/set_comp_env.html
+++ b/caravel/templates/set_comp_env.html
@@ -44,7 +44,7 @@
 		</div>
 		{% if notify_not_set is not none %}
 			<hr class="col-xs-12">
-			<h3>Environment variable(s) pointing to the <code>DIVCFG</code> file not found</h3>
+			<h3>Environment variable(s) pointing to the <code>DIVCFG</code> file not found, using default file.</h3>
 			<p>The <code>{{ notify_not_set }}</code> environment variable is not set. Set it with: 
 				<code>export {{ notify_not_set }}=path/to/file</code> and run <code>caravel</code> again.</p>
 			<p>Learn more about <a href="http://code.databio.org/divvy/configuration/" target="_blank"><code>DIVCFG</code></a> files concept <a href="http://code.databio.org/divvy/" target="_blank">here</a>.</p>
