change titles, fix #72

--- a/caravel/templates/process.html
+++ b/caravel/templates/process.html
@@ -76,7 +76,7 @@
   };
 </script>
 {% endblock %}
-{% block title %}Index{% endblock %}
+{% block title %}Process{% endblock %}
 {% block content %}
     <h2>Selected PEP info:</h2>
     {% for item in p_info %} 
