--- a/caravel/templates/set_comp_env.html
+++ b/caravel/templates/set_comp_env.html
@@ -1,5 +1,5 @@
 {% extends "template.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Computing Configuration{% endblock %}
 {% block head %}
 {{ super() }}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
