--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -29,6 +29,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{{ url_for('set_comp_env') }}">Environment settings <i class="fas fa-cog"></i></a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('process') }}">Process <i class="fas fa-tasks"></i></a>
+				</li>
 				{% block navbar %}
 				{% endblock %}
 			</ul> 
