--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -21,19 +21,19 @@
                         </select>
                     </div>
                 {% elif type == "range" %}
-                    <div class="col-3">
+                    <div class="col-2">
                         <input type="{{ type }}" {{ opts[i] }} name="{{ names[i] }}" oninput="show_value(this.name,this.value)">
                         {% set list = opts[i].split(' ') %}
                         {% set value = list[2].split('=') %}
                         {% set default = value|last %}
-                        <span id="{{ names[i] }}" class="badge badge-primary">{{ default }}</span>
+                        <p id="badge"><span id="{{ names[i] }}" class="badge badge-primary">{{ default }}</span></p>
                     </div>
                 {% else %}
                     <div class="col-auto">
                         <input class="{{ type }}" type="{{ type }}" {{ opts[i] }} name="{{ names[i] }}">
                     </div>
                 {% endif %}
-                <div class="col-auto">
+                <div class="col-auto" id="label">
                     <label class="col-form-label"><b><pre>{{ labels[i] }}</pre></b></label>
                 </div>
             </div>
