--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -48,10 +48,18 @@
 			</a>
 		</div>
 	</nav>
+
 	<div id="wrap">
 		<div id="main">
 			<body>
 				<div class="divider-15">
+					{% for message in get_flashed_messages() %}
+						<div class="alert alert-warning col-md-5">
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+							{{ message }}
+						</div>
+					{% endfor %}
+					{% block body %}{% endblock %}
 					{% block content %}{% endblock %}
 				</div>
 			</body>
