--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -14,11 +14,12 @@
             <div class="row justify-content-left">
                 {% if type == "select" %}
                     <div class="col-auto">
-                        <select class="form-control" multiple name="{{ names[i] }}">
+                        <select class="form-control" multiple size="3" name="{{ names[i] }}">
                             {% for e in opts[i] %}
                                 <option value="{{ e }}">{{ e }}</option>   
                             {% endfor %}
                         </select>
+                        <p><small>ctrl to select multiple</small></p>
                     </div>
                 {% elif type == "range" %}
                     <div class="col-2 col-slider">
