--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -43,7 +43,7 @@
 			<a class="nav-link" href="{{ url_for('shutdown') }}">
 				<button type="submit" class="btn btn-outline-light">CLOSE <i class="fa fa-times"></i></button>
 			</a>
-			<a class="nav-link" href="{{ url_for('index') }}">
+			<a class="nav-link" href="{{ url_for('index', start_over=True) }}">
 				<button type="submit" class="btn btn-outline-light">START OVER <i class="fa fa-undo"></i></button>
 			</a>
 		</div>
