add link to docs, keep links in navbar white at hover, resolves #86

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -127,3 +127,11 @@ div.col-slider {
   min-width: 240px;
   padding-right: 0px;
 }
+
+.nav-link {
+  color: white;
+  }
+
+.nav-link:hover {
+  color: white;
+  }
