--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -37,7 +37,7 @@
 			</ul> 
 			<ul class="nav justify-content-end">
 				<li class="nav-item active">
-					<a class="nav-link" href="http://code.databio.org/caravel/">Docs <i class="fa fa-book"></i></a>
+					<a class="nav-link" href="http://code.databio.org/caravel/" target="_blank">Docs <i class="fa fa-book"></i></a>
 				</li>
 			</ul>
 			<a class="nav-link" href="{{ url_for('shutdown') }}">
